[Autofill] Only run subset removing when profiles are <= 15.

Subset removing for user profiles is a O(n^2) operation, where n is the
number of profiles. This easily runs up to seconds even minutes if user
has more than 50 profiles.

Given that such user cases are rare, and we already have profile deletion
running, and when there is a lot profiles, subset removing does not bring
a lot value, we will only run it when the profiles are less or equal to
15.

Bug: 793089
Change-Id: I8930d55789fd74b88ce8b7423aa5059975aeec42
Reviewed-on: https://chromium-review.googlesource.com/852369
Commit-Queue: Hui Wu <wuandy@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527344}
Former-commit-id: dbd3b1c8e4f101cc90b11052cfa0a516e26f647e